ffprobe: downgrade log level for non fatal errors in open_input_file()

Since the errors are not fatal, it is less confusing not to show them as
errors but as warnings.

Arbitrarily fixes trac ticket #2419.